--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "sass": "^1.58.3",
     "slick-carousel": "^1.8.1"
   }
 }
