--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-aria/ssr": "^3.4.1",
+    "animate.css": "^4.1.1",
+    "antd": "^5.2.2",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "next": "latest",
+    "next-videos": "^1.4.1",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.29.0",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1"
