--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "antd": "^5.2.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
-    "next": "latest",
+    "next": "^13.2.3",
     "next-videos": "^1.4.1",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
